--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,4 +43,5 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+serialisation = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
