--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ material = "1.12.0"
 kotlinxDatetime = "0.6.0"
 #vico = "1.14.0"
 vico = "2.0.0-alpha.21"
+jupiter = "5.6.0"
 
 [libraries]
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
@@ -44,6 +45,10 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 vico-compose = { group = "com.patrykandpatrick.vico", name = "compose", version.ref = "vico" }
 vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
 vico-core = { group = "com.patrykandpatrick.vico", name = "core", version.ref = "vico" }
+jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref ="jupiter"}
+jupiter-params = { group = "org.junit.jupiter", name = "junit-jupiter-params", version.ref = "jupiter"}
+jupiter-api = {group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "jupiter"}
+jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "jupiter"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
