--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,22 +3,22 @@ agp = "8.4.2"
 constraintlayout = "2.2.0-alpha13"
 constraintlayoutCompose = "1.1.0-alpha13"
 kotlin = "1.9.0"
-coreKtx = "1.12.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
-composeBom = "2023.05.00"
-graphicsShapesAndroid = "1.0.0-alpha05"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.3"
+activityCompose = "1.9.0"
+composeBom = "2024.06.00"
+graphicsShapesAndroid = "1.0.0-beta01"
 navigationCompose = "2.7.7"
 jetbrainsKotlinJvm = "1.9.0"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 material = "1.12.0"
 kotlinxDatetime = "0.6.0"
 #vico = "1.14.0"
 vico = "2.0.0-alpha.23"
-jupiter = "5.6.0"
+jupiter = "5.8.2"
 
 [libraries]
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
